# speecher

./: .dockerignore  .env.docker.example  .env.example  .envrc  .gitignore  CLAUDE.md  DOCKER_DEVELOPMENT.md  DOCKER_FIRST_K8S_STRATEGY.md  DOCKER_README.md  Dockerfile  FASE2.md  FRONTEND_BUILD_OPTIMIZATION.md  FRONTEND_V2_PLAN.md  FRONTEND_V2_WORKFLOW.md  HYBRID_STRATEGY.md  LICENSE  Makefile  Makefile.docker  PLAYBOOK.md  README.md  README_DOCKER.md  RUNNER_SETUP.md  VISUAL_TESTING.md  ZADANIA01.md  azure-requirements.txt  cleanup-analysis.md  cleanup.sh  devmanager.py  dm  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-dev.sh  docker-start.sh  homepage-output.html  package-lock.json  package.json  pyproject.toml  repomix-output.xml  requirements-test.txt  (+10 more)
.autopm_backup_20250912_232106/.github/: KANIKO_DEBUG_SUMMARY.md  RUNNER_SETUP.md  RUNNER_TEST.md  debug-kaniko-template.yml  labeler.yml  pull_request_template.md
.autopm_backup_20250912_232106/scripts/: setup-containerd-runner.sh  setup-github-runner-rbac.sh  setup-k3s-runner.sh  setup-nerdctl-docker-compat.sh  verify-visual.sh
.claude/agents/: code-analyzer.md  file-analyzer.md  parallel-worker.md  test-runner.md
.githooks/: install-hooks.sh  pre-push
.github/: FUNDING.yml  KUBERNETES_RUNNER_SETUP.md  branch-protection.md  dependabot.yml  pull_request_template.md
.github/hooks/: validate-bash-syntax.sh
.github/kubernetes/: rbac-runner-permissions.yaml  setup-runner-permissions.sh
.github/scripts/: hybrid-build-wrapper.sh  setup-containerd-runner.sh  test-hybrid-builds.sh
.github/workflows/: ci-backup.yml  ci-k3s.yml  ci.yml  docker-tests.yml  frontend-v2-pr.yml  npm-publish.yml  pr-checks.yml  test-current-setup.yml  test-docker-symlink.yml  test-nerdctl.yml  test-playwright-runner.yml  test-runner-k3s.yml  test-runner.yml  visual-tests.yml
.husky/: pre-commit
config/: pytest.ini
docker/: README-DOCKER-HUB-ISSUES.md  backend.Dockerfile  frontend-nginx.Dockerfile  frontend-prebuilt.Dockerfile  init-mongo.js  init-postgres.sql  nginx.dev.conf  nginx.prod.conf  react.Dockerfile  react.dev.Dockerfile  react.fallback.Dockerfile  test-optimized.Dockerfile  test.Dockerfile
docs/: CLAUDE.md  DEVMANAGER.md  DOCKER.md  DOCKER_SETUP.md  IMPROVEMENTS.md  UV_SETUP.md  containerd-runner-dependencies.md  github-runner-rbac-setup.md
k8s/: ci-namespace.yml  github-runner-rbac.yml
requirements/: base.txt  dev.txt  test.txt
scripts/: compose-to-k8s.py  package.json.template  safe-commit.sh  setup-k3s-runner.sh
scripts/dev/: devmanager.py
scripts/docker/: stop.sh  test.sh
specs/: descrption.md
src/: README.md
src/backend/: __init__.py  api_keys.py  api_v2.py  auth.py  cloud_wrappers.py  database.py  file_validator.py  main.py  models.py  streaming.py
src/frontend/: Dockerfile  app.py  requirements.txt
src/react-frontend/: .dockerignore  .env.production  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
src/speacher/: azure.py  cli.py
src/speecher/: aws.py  azure.py  (+4 more)
tests/: README.md  cloud_mocks.py  conftest.py  test_api.py  test_api_keys.py  test_auth_api.py  test_aws.py  test_azure.py  test_backend_main.py  test_cli.py  test_cloud_wrappers.py  test_docker_integration.py  test_dummy.py  test_error_scenarios.py  test_file_validator.py  test_gcp.py  test_integration.py  test_main.py  test_project_api.py  test_simple.py  test_streaming.py  test_transcription.py  test_transcription_extended.py  test_user_api.py  test_utils.py  test_websocket_advanced.py  visual-verification.spec.ts
(+101 files in other folders)
