[project]
name = "speecher"
version = "0.1.0"
description = "AWS Transcribe audio transcription tool"
authors = [
    {name = "Rafal Lagowski",email = "rafal.lagowski@accenture.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.28.0",
    "requests>=2.31.0",
    "awscli (>=1.40.9,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)"
]

[tool.poetry]
packages = [{include = "speecher", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
